Modules/cmathmodule.c
@@ -2,6 +2,10 @@
 
 /* much code borrowed from mathmodule.c */
 
+#ifndef Py_BUILD_CORE_BUILTIN
+#  define Py_BUILD_CORE_MODULE 1
+#endif
+
 #include "Python.h"
 #include "pycore_dtoa.h"
 #include "_math.h"
